# libmuffintin

./: .gitignore  CONVENTIONS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mt-core/: Cargo.toml
crates/mt-core/src/: bessel.rs  conventions.rs  gaunt.rs  harmonics.rs  lib.rs  mesh.rs  reciprocal.rs  step_function.rs  units.rs
crates/mt-core/tests/: harmonics_gaunt.rs  mesh_reciprocal_properties.rs  step_function_reference.rs
crates/mt-radial/: Cargo.toml
crates/mt-radial/src/: core_dirac.rs  integrals.rs  lib.rs  valence.rs
crates/mt-radial/tests/: core_dirac.rs
crates/mt-radial/tests/data/: README.md
doc/: 01_units_and_global_conventions.md  02_angular_reciprocal_and_step_function.md  03_exponential_mesh_and_radial_quadrature.md  04_schrodinger_and_scalar_relativistic_radial_equations.md  05_local_orbitals_and_radial_integral_blocks.md  06_dirac_4c_core_and_valence.md
