[workspace]
resolver = "2"
members = [
    "crates/mt-core",
    "crates/mt-radial",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/70akaline/libmuffintin"
rust-version = "1.85"

[workspace.dependencies]
num-complex = "0.4.6"
thiserror = "2.0.12"
proptest = "1.7.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
many_single_char_names = "allow"
similar_names = "allow"
must_use_candidate = "allow"
